--- a/src/main/resources/templates/common-user/header.html
+++ b/src/main/resources/templates/common-user/header.html
@@ -146,7 +146,7 @@
                                 </a>
                             </li>
                             <li class="shopping-cart">
-                                <a href="#" class="cart-dropdown-btn">
+                                <a th:href="@{/user/products/cart}" class="cart-dropdown-btn">
                                     <span class="cart-count">3</span>
                                     <i class="flaticon-shopping-cart"></i>
                                 </a>
