--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,25 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:insert="~{common-user/head :: head}"></div>
-    <title>Login</title>
+    <title>Laptop Shop || Login</title>
 </head>
 <body>
 <div class="axil-signin-area">
-    <!-- Start Header -->
-    <div class="signin-header">
-        <div class="row align-items-center">
-            <div class="col-sm-4">
-                <a href="index.html" class="site-logo"><img th:src="@{assets/images/logo/logo.png}" alt="logo"></a>
-            </div>
-            <div class="col-sm-8">
-                <div class="singin-header-btn">
-                    <p>Not a member?</p>
-                    <a th:href="@{/register}" class="axil-btn btn-bg-secondary sign-up-btn">Sign Up Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Header -->
+    <div th:insert="common-user/login :: background-signin"></div>
 
     <div class="row">
         <div class="col-xl-4 col-lg-6">
@@ -46,7 +32,7 @@
                         </div>
                         <div class="form-group d-flex align-items-center justify-content-between">
                             <button type="submit" class="axil-btn btn-bg-primary submit-btn">Sign In</button>
-                            <a href="forgot-password.html" class="forgot-btn">Forget password?</a>
+                            <a th:href="@{/forgot-password}" class="forgot-btn">Forget password?</a>
                         </div>
                     </form>
                 </div>
