--- a/src/main/resources/templates/user/product/index.html
+++ b/src/main/resources/templates/user/product/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:insert="~{common-user/head :: head}"></div>
-    <title th:text="${pageTitle}"></title>
+    <title>Laptop Shop || Home</title>
 </head>
 <body>
 <div th:insert="~{common-user/header :: header}"></div>
