--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -17,7 +17,7 @@
         <div class="col-lg-6 offset-xl-2">
             <div class="axil-signin-form-wrap">
                 <div class="axil-signin-form">
-                    <h3 class="title">Sign in to eTrade.</h3>
+                    <h3 class="title">Sign in to Laptop Shop.</h3>
                     <p class="b2 mb--55">Enter your detail below</p>
                     <form class="singin-form" method="post" th:action="@{/login}">
                         <div class="form-group">
