modify to Model | changes relationshop between Product and Cart, not done

--- a/src/main/resources/templates/common-user/content.html
+++ b/src/main/resources/templates/common-user/content.html
@@ -12,7 +12,7 @@
                                 <h1 class="title">Roco Wireless Headphone</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -48,7 +48,7 @@
                                 <h1 class="title">Smart Digital Watch</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -84,7 +84,7 @@
                                 <h1 class="title">Laptop for AI</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -120,7 +120,7 @@
                                 <h1 class="title">Smart Digital Watch</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a th:href="@{/user/products/cart}" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
