--- a/src/main/resources/templates/user/product/index.html
+++ b/src/main/resources/templates/user/product/index.html
@@ -42,6 +42,13 @@
                                                                  data-bs-target="#quick-view-modal"><i
                                                 class="far fa-eye"></i></a></li>
                                         <li class="select-option">
+                                            <form th:action="@{/user/product/add-to-cart}"
+                                                  method="post"
+                                            >
+                                                <input type="hidden" th:name="productId" th:value="${product.id}">
+                                                <input type="hidden" th:name="productName" th:value="${product.id}">
+                                                <input type="hidden" th:name="productId" th:value="${product.id}">
+                                            </form>
                                             <a th:href="@{/user/product/add-to-card}">
                                                 Add to Cart
                                             </a>
