--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="axil-signin-area">
-    <div th:insert="common-user/login :: background-signin"></div>
+    <div th:insert="~{common-user/login :: background-signin}"></div>
 
     <div class="row">
         <div class="col-xl-4 col-lg-6">
