--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!---Coding By CodingLab | www.codinglabweb.com--->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="~{common-user/head :: head}">
+<head>
     <title>LaptopShop || Sign Up</title>
+    <div th:insert="~{common-user/head :: head}"></div>
 </head>
 <body>
 <div class="axil-signin-area">
