--- a/src/main/resources/templates/login/forgot-password.html
+++ b/src/main/resources/templates/login/forgot-password.html
@@ -8,7 +8,7 @@
 
 <div class="axil-signin-area">
 
-    <div th:insert="common-user/login :: background-signin"></div>
+    <div th:insert="~{common-user/login :: background-signin}"></div>
 
     <div class="row">
         <div class="col-xl-4 col-lg-6">
@@ -23,6 +23,7 @@
                     <p class="b2 mb--55">Enter the email address you used when you joined and we’ll send you
                         instructions to reset your password.</p>
                     <form class="singin-form"
+                          th:action="@{/user/forgot-password}"
                           method="post"
                     >
                         <div class="form-group">
