--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -21,9 +21,9 @@
                     <p class="b2 mb--55">Enter your detail below</p>
                     <form class="singin-form" method="post" th:action="@{/login}">
                         <div class="form-group">
-                            <label>Phone number</label>
+                            <label>Email</label>
                             <input type="text" class="form-control" name="username"
-                                   placeholder="Enter phone number">
+                                   placeholder="Enter email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
