configuration | exchange config security, and validation

--- a/src/main/resources/templates/common-user/login.html
+++ b/src/main/resources/templates/common-user/login.html
@@ -2,7 +2,7 @@
 <div th:fragment="background-signin" class="signin-header">
     <div class="row align-items-center">
         <div class="col-sm-4">
-            <a href="index.html" class="site-logo"><img th:src="@{assets/images/logo/logo.png}" alt="logo"></a>
+            <a th:href="@{/user}" class="site-logo"><img th:src="@{etrade/assets/images/logo/logo.png}" alt="logo"></a>
         </div>
         <div class="col-sm-8">
             <div class="singin-header-btn">
