--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -30,6 +30,10 @@
                             <input type="password" class="form-control" name="password"
                                    placeholder="Enter password">
                         </div>
+                        <div th:if="${param.error}">
+                            <p class="alert alert-danger">Username or password isn't correct </p>
+                            <br>
+                        </div>
                         <div class="form-group d-flex align-items-center justify-content-between">
                             <button type="submit" class="axil-btn btn-bg-primary submit-btn">Sign In</button>
                             <a th:href="@{/forgot-password}" class="forgot-btn">Forget password?</a>
