--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -11,13 +11,13 @@
     <div class="signin-header">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <a href="index.html" class="site-logo"><img th:src="@{/etradeassets/images/logo/logo.png}"
-                                                            alt="logo"></a>
+                <a th:href="@{/user}" class="site-logo"><img th:src="@{/etrade/assets/images/logo/logo.png}"
+                                                             alt="logo"></a>
             </div>
             <div class="col-md-6">
                 <div class="singin-header-btn">
                     <p>Already a member?</p>
-                    <a href="sign-in.html" class="axil-btn btn-bg-secondary sign-up-btn">Sign In</a>
+                    <a th:href="@{/login}" class="axil-btn btn-bg-secondary sign-up-btn">Sign In</a>
                 </div>
             </div>
         </div>
@@ -53,8 +53,8 @@
                         </div>
                         <div class="form-group">
                             <label>Phone Number</label>
-                            <input type="email" class="form-control" th:field="*{phoneNumber}"
-                                   placeholder="Enter email"
+                            <input type="text" class="form-control" th:field="*{phoneNumber}"
+                                   placeholder="Enter phone number"
                                    required
                             >
                         </div>
