--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -38,42 +38,36 @@
                     <form class="singin-form"
                           method="post"
                           th:action="@{/register}"
-                          th:object="${registerUser}"
+                          th:object="${userRegister}"
                     >
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="text" class="form-control"
+                            <input type="email" class="form-control"
                                    th:field="*{email}"
-                                   placeholder="Enter phone number"
-                                   required
+                                   placeholder="Enter email"
                             >
-                            <div th:if="${existingEmail}" class="alert alert-danger">
-                                <span th:text="${existingEmail}"></span>
-                            </div>
+                            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: red;"></p>
                         </div>
                         <div class="form-group">
                             <label>Phone Number</label>
                             <input type="text" class="form-control" th:field="*{phoneNumber}"
                                    placeholder="Enter phone number"
-                                   required
                             >
                         </div>
                         <div class="form-group">
                             <label>Password</label>
                             <input type="password" class="form-control" th:field="*{password}"
                                    placeholder="Enter password"
-                                   required
                             >
+                            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;"></p>
                         </div>
                         <div class="form-group">
                             <label>Confirm password</label>
                             <input type="password" class="form-control" th:field="*{confirmPassword}"
                                    placeholder="Enter password again"
-                                   required
                             >
-                            <div th:if="${notMatchPass}" class="alert alert-danger">
-                                <span th:text="${notMatchPass}"></span>
-                            </div>
+                            <p th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
+                               style="color: red;"></p>
                         </div>
                         <div class="form-group">
                             <label>Full Name</label>
@@ -84,7 +78,10 @@
                             <label>Birth day</label>
                             <input type="date" class="form-control" th:field="*{dayOfBirth}"
                                    placeholder="Enter birth day">
+                            <p th:if="${#fields.hasErrors('dayOfBirth')}" th:errors="*{dayOfBirth}"
+                               style="color: red;"></p>
                         </div>
+
                         <div class="form-group">
                             <div class="gender-box">
                                 <h3>Gender</h3>
