redesign CRUD Product at admin

--- a/src/main/resources/templates/admin/product/CreateProduct.html
+++ b/src/main/resources/templates/admin/product/CreateProduct.html
@@ -115,7 +115,7 @@
                     <button class="col-md-6 btn btn-primary mx-3" style="width: 300px;">
                         Create product
                     </button>
-                    <a th:href="@{/admin/products}" class="col-md-6 btn btn-secondary mx-3">Cancel</a>
+                    <a th:href="@{/templates/admin/product}" class="col-md-6 btn btn-secondary mx-3">Cancel</a>
                 </div>
             </form>
         </div>
