--- a/src/main/resources/templates/user/product/index.html
+++ b/src/main/resources/templates/user/product/index.html
@@ -72,8 +72,8 @@
                                         <span class="rating-number">(64)</span>
                                         <div>
                                             <h5 class="title">
-                                                <a th:href="@{/user/product/add-to-card}"
-                                                   th:text="${product.name}"></a>
+                                                <span th:text="${product.name}"></span>
+                                                
                                             </h5>
                                             <div class="product-price-variant">
                                                 <span class="price current-price"
